@@ -1,3 +1,9 @@
+2005-08-03  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* index.php:
+	* contact/index.php:
+	updated links to mailing list archives
+
 2005-07-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* authors/index.php:
